# emperor

./: .gitignore  CONTEXT.md  Dockerfile.jupyter  Dockerfile.torch  LICENSE  MANIFEST.in  README.md  VISION.md  avante.md  datasets.ipynb  docker-compose.yml  download_logs.sh  env.ps1  env.sh  experiment.sh  main.py  migration_changes.md  mise.toml  model_migration.md  neuron_features.md  print_models.py  pyproject.toml  pyrightconfig.json  run_experiment.sh  run_test.sh  run_tests.sh  test.py  test_run.sh  test_vars.sh  tests.py
apps/workbench/api/: MANIFEST.in  README.md  pyproject.toml
apps/workbench/api/benchmarks/: run_history.py  training_jobs.py
apps/workbench/api/tests/: conftest.py
workbench/: README.md  __init__.py  pyproject.toml
workbench/backend/: __init__.py  blocking.py  catalogs.py  cgroup_worker_wrapper.py  cli.py  config_snapshots.py  dependencies.py  exceptions.py  failures.py  historical_inspection.py  inspection_adapter.py  inspection_errors.py  inspection_serialization.py  inspection_worker.py  job_store.py  launch.py  log_run_artifacts.py  log_run_deletion.py  log_run_query.py  log_run_scanner.py  log_runs.py  main.py  middleware.py  model_identity.py  monitor_data.py  mutation_context.py  mutation_execution.py  project_adapter.py  settings.py  tensorboard_reader.py  training_cgroups.py  training_contracts.py  training_events.py  training_job_lifecycle.py  training_job_projector.py  training_jobs.py  training_live_projection.py  training_monitor_locator.py  training_progress_store.py  training_request_commands.py  (+4 more)
workbench/backend/api/: __init__.py  mutation_policy.py
workbench/backend/api/v1/: __init__.py  config_snapshot_mapping.py  log_archive_upload.py  logs_mapping.py  router.py  training_commands.py  training_mapping.py
workbench/backend/benchmarks/: benchmark_log_run_pages.py
workbench/backend/core/: __init__.py  config.py  errors.py  limits.py  security.py
workbench/backend/db/: __init__.py  session.py
workbench/backend/historical_inspection/: __init__.py  _checkpoint_ranking.py  _checkpoint_shapes.py  _inspection.py
workbench/backend/inspector/: __init__.py  checkpoint_shapes.py  discovery.py  errors.py  field_descriptions.py  graph.py  overrides.py  schema.py  search.py  service.py  values.py
workbench/backend/log_experiments/: __init__.py  coordination.py  errors.py  identity.py
workbench/backend/models/: __init__.py
workbench/backend/repositories/: __init__.py  config_snapshots.py  log_runs.py  training_jobs.py
workbench/backend/routes/: __init__.py  config_snapshots.py  inspect.py  logs.py  models.py  training.py
workbench/backend/run_history/: __init__.py  archive.py  artifacts.py  checkpoint_ranking.py  contracts.py  deletion.py  errors.py  paths.py  query.py  records.py  scanner.py  service.py
workbench/backend/runtime/: __init__.py  job_status.py
workbench/backend/schemas/: __init__.py  _base.py  _capabilities.py  _config_snapshots.py  _health.py  _inspection.py  _limits.py  _logs.py  _models.py  _monitor_data.py  _training.py
workbench/backend/services/: __init__.py  config_snapshots.py  inspection.py  log_import.py  logs.py  models.py  training.py
workbench/backend/storage/: __init__.py  local_files.py
workbench/backend/tensorboard/: __init__.py  events.py  readers.py
workbench/backend/tests/: __init__.py  browser_performance_server.py  contract_e2e_server.py  helpers.py  inspection_support.py  test_api_contract.py  test_app_factory.py  test_backend_thread_safety.py  test_catalog_indexes.py  test_checkpoint_ranking.py  test_compatibility.py  test_config_snapshots_api.py  test_config_snapshots_service.py  test_config_snapshots_store.py  test_dependency_direction.py  test_download_logs_script.py  test_environment.py  test_fast_smoke.py  test_finite_json_boundaries.py  test_inspection_adapters.py  test_inspection_contract_freeze.py  test_inspection_worker.py  test_inspector.py  test_inspector_discovery.py  test_inspector_graph.py  test_inspector_schema.py  test_job_status.py  test_job_store.py  test_json_api_schemas.py  test_local_files.py  test_log_archive_import.py  test_log_experiment_mutations.py  test_log_run_collaborators.py  test_log_runs.py  test_log_services.py  test_logs_mapping.py  test_model_metadata_concurrency.py  test_monitor_data.py  test_mutation_execution.py  test_mutation_policy.py  (+21 more)
workbench/backend/tests/fixtures/: inspection_contract_v1.json
workbench/backend/training_jobs/: __init__.py  cgroup_worker.py  cgroups.py  contracts.py  errors.py  launcher.py  lifecycle.py  limits.py  monitoring.py  plans.py  progress.py  projection.py  run_plan_adapter.py  run_progress.py  runtime.py  serialization.py  service.py  snapshot.py  status.py  store.py  worker.py
workbench/frontend/: README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
workbench/frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
workbench/frontend/scripts/: benchmark-browser-long-session.mjs  benchmark-cluster-3d.ts  benchmark-graph-locations.ts  benchmark-historical-grouping.ts  benchmark-log-grouping.ts  benchmark-log-scalar-plan.ts  check-performance-budgets.mjs  performance-evidence.d.mts  performance-evidence.mjs  runtime-paths.mjs  runtime-paths.test.mjs
workbench/frontend/src/hooks/: use-copy-to-clipboard.ts
workbench/frontend/src/lib/: api-boundary.test.ts  api-origin-lock.test.ts  api.test.ts  api.ts  auth-token.ts  charts.ts  cluster-growth.test.ts  cluster-growth.ts  config-snapshots.test.ts  config-snapshots.ts  config.test.ts  config.ts  format.test.ts  format.ts  graph.ts  historical-monitor-runs.test.ts  historical-monitor-runs.ts  (+14 more)
workbench/frontend/tests/: backend-frontend-contract.e2e.test.tsx  browser-performance-baseline.test.ts  extracted-components.test.tsx  graph-locations-card.test.tsx  graph-node-view.test.tsx  graph.test.ts  log-confusion-matrix-heatmap.test.tsx  log-scalar-chart.test.tsx  neuron-cluster-3d-popup.test.tsx  performance-evidence.test.mjs  training-command.test.ts
(+4203 files in other folders)
