[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emperor"
version = "0.1.0"
description = "A PyTorch-based deep learning framework"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "CC-BY-NC-4.0" }
authors = [{ name = "Emperor", email = "emperor@example.com" }]
keywords = ["machine learning", "deep learning", "pytorch", "transformers"]
dependencies = [
  "torch",
  "torchvision",
  "torchtext",
  "torchmetrics",
  "transformers",
  "datasets",
  "matplotlib",
  "ipython",
  "tensorboard",
  "setuptools",
  "pandas",
  "ipykernel",
  "numpy",
  "lightning",
  "torchinfo",
  "gymnasium",
  "filelock>=3.18,<4",
]

[project.scripts]
emperor = "models.project_cli:main"
emperor-project-adapter = "models.adapter_cli:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.8,<0.14",
]

[project.urls]
Homepage = "https://github.com/yourusername/emperor"
Repository = "https://github.com/yourusername/emperor"
Issues = "https://github.com/yourusername/emperor/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = [
  "emperor",
  "emperor.*",
  "models",
  "models.*",
  "model_runtime",
  "model_runtime.*",
]
exclude = ["docs", "docs.*", "tests", "tests.*", "workbench", "workbench.*"]
namespaces = false

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["emperor", "models", "tests", "workbench/backend"]
exclude = [
  ".git",
  ".next",
  ".pytest_cache",
  ".ruff_cache",
  "__pycache__",
  "build",
  "data",
  "dist",
  "logs",
  "node_modules",
  "torchenv",
  "workbench/.runtime",
  "workbench/frontend/.next",
  "workbench/frontend/node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["model_runtime"]
