[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emperor"
version = "0.1.0"
description = "A PyTorch-based deep learning framework"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "CC-BY-NC-4.0" }
authors = [{ name = "Emperor", email = "emperor@example.com" }]
keywords = ["machine learning", "deep learning", "pytorch", "transformers"]
dependencies = [
  "torch",
  "torchvision",
  "torchtext",
  "torchmetrics",
  "datasets",
  "matplotlib",
  "ipython",
  "tensorboard",
  "numpy",
  "lightning",
  "gymnasium",
  "filelock>=3.18,<4",
  "Pillow",
  "tokenizers",
]

[project.scripts]
emperor = "models.project_cli:main"
emperor-project-adapter = "models.adapter_cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "coverage[toml]>=7.15,<8",
  "mutmut>=3.6,<4",
  "psutil>=7,<8",
  "ruff>=0.8,<0.14",
]

[project.urls]
Homepage = "https://github.com/yourusername/emperor"
Repository = "https://github.com/yourusername/emperor"
Issues = "https://github.com/yourusername/emperor/issues"

[tool.setuptools]
include-package-data = false
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "emperor",
  "emperor.*",
  "models",
  "models.*",
  "model_runtime",
  "model_runtime.*",
]
namespaces = false

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
exclude = [
  ".git",
  ".next",
  ".runtime",
  ".pytest_cache",
  ".ruff_cache",
  "__pycache__",
  "apps",
  "build",
  "data",
  "dist",
  "logs",
  "node_modules",
  "torchenv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["emperor", "model_runtime", "models"]

[tool.coverage.run]
branch = true
source = ["emperor.attention"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
fail_under = 100
precision = 2
show_missing = true
skip_covered = false

[tool.mutmut]
source_paths = ["emperor/"]
only_mutate = [
  "emperor/attention/core/_validator.py",
  "emperor/attention/core/layers.py",
  "emperor/attention/core/monitor.py",
  "emperor/attention/core/runtime.py",
  "emperor/attention/core/handlers/*.py",
  "emperor/attention/core/variants/*/layer.py",
  "emperor/attention/core/variants/*/validator.py",
  "emperor/attention/core/variants/*/processor.py",
  "emperor/attention/core/variants/*/projector.py",
  "emperor/attention/core/variants/*/mask.py",
  "emperor/attention/core/variants/*/bias.py",
  "emperor/attention/core/variants/*/reshaper.py",
  "emperor/attention/core/variants/*/zero_attention.py",
]
do_not_mutate = ["*/__init__.py"]
pytest_add_cli_args_test_selection = [
  "tests/unit/test_attention.py",
  "tests/unit/test_attention_batch_dimension_manager.py",
  "tests/unit/test_attention_contracts.py",
  "tests/unit/test_attention_correctness_regressions.py",
  "tests/unit/test_attention_key_value_bias.py",
  "tests/unit/test_attention_mask.py",
  "tests/unit/test_attention_mask_validator.py",
  "tests/unit/test_attention_mixture_of_attention_heads.py",
  "tests/unit/test_attention_monitor.py",
  "tests/unit/test_attention_mutation_contracts.py",
  "tests/unit/test_attention_processor.py",
  "tests/unit/test_attention_projector.py",
  "tests/unit/test_attention_runtime_shape.py",
  "tests/unit/test_attention_runtime_values.py",
  "tests/unit/test_attention_validator.py",
  "tests/unit/test_attention_zero_attention.py",
  "tests/unit/test_transformer_relative_positional_embedding.py",
]
also_copy = ["model_runtime/", "models/", "tests/support/"]
