[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emperor"
version = "0.1.0"
description = "A PyTorch-based deep learning framework"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "CC-BY-NC-4.0" }
authors = [{ name = "Emperor", email = "emperor@example.com" }]
keywords = ["machine learning", "deep learning", "pytorch", "transformers"]
dependencies = [
  "torch",
  "torchvision",
  "torchtext",
  "torchmetrics",
  "datasets",
  "matplotlib",
  "ipython",
  "tensorboard",
  "numpy",
  "lightning",
  "gymnasium",
  "filelock>=3.18,<4",
  "Pillow",
  "tokenizers",
]

[project.scripts]
emperor = "models.project_cli:main"
emperor-project-adapter = "models.adapter_cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "coverage[toml]>=7.15,<8",
  "mutmut>=3.6,<4",
  "psutil>=7,<8",
  "ruff>=0.8,<0.14",
]

[project.urls]
Homepage = "https://github.com/yourusername/emperor"
Repository = "https://github.com/yourusername/emperor"
Issues = "https://github.com/yourusername/emperor/issues"

[tool.setuptools]
include-package-data = false
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "emperor",
  "emperor.*",
  "models",
  "models.*",
  "model_runtime",
  "model_runtime.*",
]
namespaces = false

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
exclude = [
  ".git",
  ".next",
  ".runtime",
  ".pytest_cache",
  ".ruff_cache",
  "__pycache__",
  "apps",
  "build",
  "data",
  "dist",
  "logs",
  "node_modules",
  "torchenv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["emperor", "model_runtime", "models"]

[tool.coverage.run]
branch = true
source = ["emperor"]
concurrency = ["multiprocessing"]
parallel = true

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
fail_under = 100
precision = 2
show_missing = true
skip_covered = false

[tool.mutmut]
source_paths = ["src/emperor/"]
do_not_mutate = ["*/__init__.py"]
also_copy = ["src/model_runtime/", "src/models/", "tests/support/"]
