[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emperor-workbench"
version = "0.1.0"
description = "Workbench application for Emperor model projects"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "CC-BY-NC-4.0" }
dependencies = [
  "emperor>=0.1,<0.2",
  "fastapi>=0.139,<0.140",
  "httpx>=0.28,<0.29",
  "psutil>=7,<8",
  "pydantic-settings",
  "starlette>=1.3,<1.4",
  "uvicorn[standard]>=0.51,<0.52",
  "pywin32>=311; sys_platform == 'win32'",
]

[project.scripts]
emperor-workbench = "workbench.backend.launch:main"

[tool.setuptools]
packages = [
  "workbench",
  "workbench.backend",
  "workbench.backend.api",
  "workbench.backend.api.v1",
  "workbench.backend.api.v1.routers",
  "workbench.backend.core",
  "workbench.backend.historical_inspection",
  "workbench.backend.log_experiments",
  "workbench.backend.run_history",
  "workbench.backend.schemas",
  "workbench.backend.services",
  "workbench.backend.storage",
  "workbench.backend.tensorboard",
  "workbench.backend.training_jobs",
]

[tool.setuptools.package-dir]
workbench = "."
