[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emperor-workbench"
version = "0.1.0"
description = "Workbench application for Emperor model projects"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "CC-BY-NC-4.0" }
dependencies = [
  "emperor>=0.1,<0.2",
  "fastapi>=0.139,<0.140",
  "pydantic>=2.7,<3",
  "pydantic-settings",
  "starlette>=1.3,<1.4",
  "tensorboard",
  "torch",
  "typing-extensions>=4.8,<5",
  "uvicorn[standard]>=0.51,<0.52",
  "pywin32>=311; sys_platform == 'win32'",
]

[project.scripts]
emperor-workbench = "emperor_workbench.cli:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<0.29",
  "psutil>=7,<8",
  "pytest>=9,<10",
  "ruff>=0.8,<0.14",
]

[tool.setuptools]
include-package-data = false
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "emperor_workbench",
  "emperor_workbench.*",
]
namespaces = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests", "benchmarks"]
exclude = [
  ".pytest_cache",
  ".ruff_cache",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = [
  "emperor_workbench",
  "tests",
]
